--- a/index.html
+++ b/index.html
@@ -21,7 +21,12 @@
   <body>
     <header>
       <nav class="topnav">
-        <a class="active" href="#home">Home</a>
+        <a
+          href="#"
+          style="font-size: 17px; color: white; background-color: #2196f3"
+          >TRAVEL.Ph</a
+        >
+        <a href="#home">Home</a>
         <a href="#about">About</a>
         <a href="#contact">Contact</a>
         <div class="search-container">
